changed city to location

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://joeldasari.github.io/syncinterns",
+  "homepage": "https://joeldasari.github.io/task1",
   "name": "weatherapp",
   "version": "0.1.0",
   "private": true,
